--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -3,8 +3,10 @@ html {
 }
 // pra 10 yung font
 body {
+  color: $dark-grey;
   font-family: Helvetica, Arial, sans-sarif;
   font-size: $m-size;
+  line-height: 1.6
 }
 
 button {
