--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -1,3 +1,15 @@
+// colors
+$dark-grey: #333333;
+$off-blue: #008ae6;
+
+// Font Size
+$fontS-xl: 2.2rem;
+$fontS-l: 1.8rem;
+$fontS-m: 1.4rem;
+$fontS-s: 1rem;
+$fontS-xs: .6rem;
+
+// size
 $s-size: 1.2rem;
 $m-size: 1.6rem;
 $l-size: 3.2rem;
