--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -2,6 +2,8 @@
 $dark-grey: #333333;
 $off-blue: #008ae6;
 $dark-orange: #ff3300;
+$off-white: #f7f7f7;
+$grey: #667667;
 
 // Font Size
 $fontS-xl: 2.2rem;
